tests/ui/imports/import-loop.stderr
error[E0432]: unresolved import `y::x`
  --> $DIR/import-loop.rs:4:13
   |
LL |     pub use y::x;
   |             ^^^^ no `x` in `y`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
